MR Implementacion bolitas

--- a/public/css/selector_roles.css
+++ b/public/css/selector_roles.css
@@ -17,3 +17,16 @@
 /* .nav-link{
     color:white !important;
 } */
+
+/*Flecha para hacer la pagina hacia arriba*/
+.ir-arriba{
+    display:none;
+    background-repeat:no-repeat;
+    font-size:20px;
+    color: #343A40;
+    cursor:pointer;
+    position:fixed;
+    bottom:10px;
+    right:10px;
+    z-index:2;
+  }
