MR implementacion css plantilla p1

--- a/public/css/selector_roles.css
+++ b/public/css/selector_roles.css
@@ -33,3 +33,19 @@
     z-index:2;
 }
 
+/* LOGO */
+.logo-xl.brand-image-xl{
+    left: 30px !important;
+    top: -7px !important;
+}
+.brand-link .brand-image-xl {
+    line-height: .8 !important;
+    max-height: 68px !important;
+    width: auto !important;
+}
+
+/* .nav-header {
+    color: black !important;
+    text-align: center;
+    font-weight: bold;
+} */
