--- a/public/css/navbar_sidebar_footer.css
+++ b/public/css/navbar_sidebar_footer.css
@@ -1,44 +1,37 @@
-/* background */
-                    .sidebar-dark-white2{
-                        background-color: #343a40 !important;
-                    }
-
-                    /* colores menú padre sin seleccionar */
-                    .nav-sidebar .nav-item > .nav-link{
-                        color: white;
-                    }
-
-                    /* colores menú padre que tengan sub menus cuando son seleccionados */
-                    .nav-sidebar > .nav-item.menu-open > .nav-link{
-                        background-color: rgba(255, 255, 255, .1) !important;
-                        color: white !important;
-                    }
-
-                    /* color menú padre cuando se deja de hacer focus */
-                    .nav-pills .nav-link.active{
-                        color: #fff !important;
-                        background-color: #007bff !important;
-                    }
-
-                    /* colores menú hijos */
-                    .nav-treeview > .nav-item > .nav-link{
-                        color:white !important;
-                    }
-
-                    /* hover menu hijos */
-                    .nav-treeview > .nav-item > .nav-link:hover{
-                        box-shadow: 0 1px 3px rgba(0,0,0,.12),0 1px 2px rgba(0,0,0,.24);
-                        margin-left: 7px;
-                    }
-
-                    /* colores menú hijo seleccionado */
-                    .nav-treeview >.nav-item >.nav-link.active{
-                        background-color: rgba(255,255,255,.9) !important;
-                        color: #343A40 !important;
-                    }
-
-                    .nav-header {
-                        color: white !important;
-                        text-align: center;
-                        font-weight: bold;
-                    }
+.sidebar-dark-white2{
+                            background-color: #ECECEC !important;
+                        }
+                        
+                        .nav .nav-link{/* Cambiar estilo de opciones*/ 
+                            color:black !important; 
+                            background: linear-gradient(90deg, rgba(163,163,163,1) 0%, rgba(251,251,251,1) 82%);
+                            font-weight: bold;
+                            border-right: #9a9a9a 3px solid;
+                            border-bottom: #9a9a9a 3px solid;
+                            margin-bottom: 10px !important;
+                        }
+                        .nav .nav-link:hover{
+                            background: linear-gradient(90deg,rgba(251,251,251,1)  70%, rgba(163,163,163,1) 90%);
+                            color:#0d6efd!important;
+                            font-weight: bold;
+                            font-size: 16px;
+                        }
+                        
+                        .nav-pills .nav-treeview .nav-link.active, .nav-pills .show>.nav-link {
+                            color: white !important;
+                            font-weight: bold;  
+                            background: #17a2b8 !important; 
+                        }
+                        
+                        .nav-treeview .nav-link {
+                            margin-left: 7px;
+                            font-weight: normal;
+                            border-right: #0d6efd 1px solid;
+                            border-bottom: #0d6efd 1px solid;
+                        }
+    
+                        .nav-header {
+                            color: black !important;
+                            text-align: center;
+                            font-weight: bold;
+                        }
