Se finaliza frontend de la modal para la carga de documentos

--- a/public/css/selector_roles.css
+++ b/public/css/selector_roles.css
@@ -48,4 +48,22 @@
     width: auto !important;
 }
 
+/* Seleccionar archivo */
+
+.select-doc{
+    padding-inline: inherit; 
+    padding-block: inherit; 
+    height: max-content; 
+    color: black;
+}
+
+.button-doc-select{
+    padding-block: inherit;
+}
+
+.scales{
+
+    scale: 2;
+}
+
 
