--- a/public/css/selector_roles.css
+++ b/public/css/selector_roles.css
@@ -65,3 +65,12 @@
     scale: 2;
 }
 
+.select2-selection__choice{
+    background: transparent !important;
+    color: black !important;
+    border: 1px solid black !important;
+}
+
+.bootstrap-duallistbox-container select {
+    width: 100% !important;
+}
