--- a/public/css/formularios.css
+++ b/public/css/formularios.css
@@ -10,3 +10,9 @@ textarea{
     border: 1px solid #343a40;
 } */
 
+#historialAcciones {
+    width: 0;
+    height: auto;
+    overflow: hidden;
+    transition: width 0.5s ease;
+} 
