--- a/public/css/campimetria.css
+++ b/public/css/campimetria.css
@@ -19,6 +19,7 @@
 
 #tabla_calculos_deficiencia_visual_modal thead tr th{
     border: 1.3px solid black;
+    text-align: center;
 }
 
 #tabla_calculos_deficiencia_visual_modal tbody tr td{
