Implementacion Comite interdisciplinario y correspondescias parte 1

--- a/public/css/selector_roles.css
+++ b/public/css/selector_roles.css
@@ -77,6 +77,22 @@
     display: none;
 }
 
+#div_tipo_destinatario_principal{
+    display: none;
+}
+
+#div_nombre_destinatariopri{
+    display: none;
+}
+
+#div_nombre_destinatariopri_afi_{
+    display: none;
+}
+
+#div_nombre_destinatariopri_empl{
+    display: none;
+}
+
 .btn-icon-only {
     border: none;
     padding: 0;
