--- a/public/css/selector_roles.css
+++ b/public/css/selector_roles.css
@@ -219,3 +219,30 @@
     padding: 5px;
     text-align: justify;
 }
+
+.loading {
+    z-index: 1051; /* Asegúrate de que el z-index sea mayor que el del modal */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.loading-content {
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spinner 2s linear infinite;
+}
+
+@keyframes spinner {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
