Implementacion pbs 062 parte 1

--- a/public/css/selector_roles.css
+++ b/public/css/selector_roles.css
@@ -161,6 +161,33 @@ html {
     scroll-behavior: smooth;
 }
 
+/* spinner de carga despues de generar la lista de chequeo */
+.spinner-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+    z-index: 1051;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.spinner-grow {
+    width: 3rem;
+    height: 3rem;
+}
+
+.spinner-expediente {
+    display: flex;
+    width: max-content;
+    margin-left: -100px;
+    font-weight: bold;
+}
+
+
 .btn-icon-only {
     border: none;
     padding: 0;
